[tool.poetry]
name = "carp"
version = "0.1.0"
description = "CARP: Contrastive Authoring and Reviewing Pairing"
authors = ["Shahbuland Matiana"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
torch = "^1.10.0"
wandb = "^0.12.5"
transformers = "^4.11.3"
datasets = "^1.14.0"
deepspeed = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
torchtyping = "^0.1.4"
ipykernel = "^6.4.2"
jupyter = "^1.0.0"
ipywidgets = "^7.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
