[metadata]
name = magiCARP
version = 0.0.1
author = Eleuther.ai
author_email = ''
description = magiCARP: Contrastive Authoring+Reviewing Pretraining
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EleutherAI/magiCARP
project_urls =
    Bug Tracker = https://github.com/EleutherAI/magiCARP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[tool:isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = True

[flake8]
ignore = E203, E501, E731, E741, W503, W504, W605, PAI100, PAI101, PAI201, PAI202, PAI203, B009, B010, F401, F403, F405, F821, E402, E722, B001
max-line-length = 119